k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  selector:
    app: petclinic
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
